# rwkv-rs-stable

./: .gitignore  AGENTS.md  Cargo.toml  README-zh.md  README.md
.agents/skills/code-review/: SKILL.md
.agents/skills/code-review/agents/: openai.yaml
.agents/skills/coding-conventions/: SKILL.md
.agents/skills/coding-conventions/agents/: openai.yaml
.agents/skills/commit-and-pr/: SKILL.md
.agents/skills/commit-and-pr/agents/: openai.yaml
.agents/skills/development-workflow/: SKILL.md
.agents/skills/development-workflow/agents/: openai.yaml
.agents/skills/documentation-workflow/: SKILL.md
.agents/skills/documentation-workflow/agents/: openai.yaml
.agents/skills/feature-boundaries/: SKILL.md
.agents/skills/project-structure/: SKILL.md
.agents/skills/testing-layout/: SKILL.md
.agents/skills/verification-standards/: SKILL.md
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  combine-dependabot-prs.yml  dependencies.yml  publish.yml  stale-pr.yml  test-gpu.yml  vulnerabilities.yml
crates/rwkv/: Cargo.toml
crates/rwkv-config/: Cargo.toml
crates/rwkv-config/src/: lib.rs
crates/rwkv-config/src/raw/: eval.rs  infer.rs  mod.rs  model.rs  train.rs
crates/rwkv-config/src/validated/: eval.rs  infer.rs  mod.rs  model.rs  train.rs
crates/rwkv-data/: Cargo.toml
crates/rwkv-data/benches/: mmap.rs  processor.rs  tokenizer.rs
crates/rwkv-data/benches/mmap/: bin.rs  bin_old.rs  idx.rs  map.rs  mod.rs  sample.rs
crates/rwkv-data/benches/processor/: mod.rs
crates/rwkv-data/benches/tokenizer/: mod.rs
crates/rwkv-data/src/: lib.rs
crates/rwkv-data/src/mmap/: bin.rs  bin_old.rs  dtype.rs  idx.rs  map.rs  mod.rs  sample.rs
crates/rwkv-data/src/processor/: mod.rs
crates/rwkv-data/src/processor/file/: mod.rs
crates/rwkv-data/src/processor/file/reader/: csv.rs  json.rs  mod.rs  parquet.rs
crates/rwkv-data/src/processor/file/writer/: csv.rs  json.rs  mod.rs  parquet.rs
crates/rwkv-data/src/processor/pool/: mod.rs
crates/rwkv-data/src/processor/pool/dedup/: exact_hash_sample.rs  exact_hash_sentence.rs  mod.rs
crates/rwkv-data/src/processor/pool/sort/: alphabetical.rs  mod.rs
crates/rwkv-data/src/processor/stream/: mod.rs
crates/rwkv-data/src/processor/stream/filter/: compression_ratio_tokenizer.rs  compression_ratio_zstd.rs  language_char_script.rs  mod.rs  repetition_gopher.rs
crates/rwkv-data/src/processor/stream/formatter/: mod.rs  normalization.rs  remove_special_token.rs
crates/rwkv-data/src/tokenizer/: mod.rs  trie.rs
crates/rwkv-derive/: Cargo.toml
crates/rwkv-derive/src/: ast.rs  config_builder.rs  lib.rs  line_ref.rs
crates/rwkv-derive/tests/: ui.rs
crates/rwkv-derive/tests/ui/fail/: config_builder_duplicate_raw.rs  config_builder_duplicate_raw.stderr  config_builder_invalid_path.rs  config_builder_invalid_path.stderr  config_builder_missing_cell.rs  config_builder_missing_cell.stderr  config_builder_missing_raw.rs  config_builder_missing_raw.stderr  config_builder_non_string_raw.rs  config_builder_non_string_raw.stderr  config_builder_tuple_struct.rs  config_builder_tuple_struct.stderr  line_ref_unsupported_type.rs  line_ref_unsupported_type.stderr
crates/rwkv-derive/tests/ui/pass/: config_builder.rs  line_ref.rs
crates/rwkv-nn/: Cargo.toml
crates/rwkv-nn/benches/: kernels.rs  mod.rs
crates/rwkv-nn/benches/kernels/addcmul/: backward.rs  forward.rs
crates/rwkv-nn/benches/kernels/template/addcmul/: backward.rs  forward.rs
crates/rwkv-nn/benches/kernels/template/token_shift_diff/: backward.rs  forward.rs
crates/rwkv-nn/benches/kernels/token_shift_diff/: backward.rs  forward.rs
crates/rwkv-nn/src/: lib.rs
crates/rwkv-nn/src/cells/: causal.rs  mod.rs
crates/rwkv-nn/src/functions/: context_mask.rs  get_singular_triplet.rs  init_weights.rs  lerp.rs  mod.rs  normalize.rs  qr.rs
crates/rwkv-nn/src/kernels/: check.rs  mod.rs
crates/rwkv-nn/src/kernels/addcmul/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/infer/guided_token_mask/: forward.rs  host.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/infer/rapid_sample/: forward.rs  host.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/template/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/template/addcmul/: backward.rs  forward.rs  io.rs  mod.rs
crates/rwkv-nn/src/kernels/template/matmul_add_relu/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/template/token_shift_diff/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/token_shift_diff/: backward.rs  forward.rs  io.rs  mod.rs
crates/rwkv-nn/src/kernels/train/: mod.rs
crates/rwkv-nn/src/kernels/train/channel_mixer/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/train/time_mixer/: mod.rs
crates/rwkv-nn/src/kernels/train/time_mixer/learning_rate_gate/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/train/time_mixer/mix6/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/train/time_mixer/value_residual_gate/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/kernels/train/time_mixer/wkv7/: backward.rs  forward.rs  io.rs  kernel.rs  mod.rs
crates/rwkv-nn/src/layers/: lora.rs  mod.rs
crates/rwkv-nn/src/modules/: mod.rs
crates/rwkv-nn/src/modules/channel_mixer/: mod.rs
crates/rwkv-nn/src/modules/time_mixer/: gated_readout.rs  mod.rs  param_state.rs  weight_prepare.rs
crates/rwkv-nn/src/test_utils/: backend.rs  mod.rs
crates/rwkv-test/: Cargo.toml
crates/rwkv-test/src/: main.rs
crates/rwkv/src/: lib.rs
note_for_agents/: code_review.md  coding_conventions.md  development_workflow.md  documentation_workflow.md  testing_layout.md  verification_standards.md
rwkv-rs-book/src/: SUMMARY.md
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: bench.rs  books.rs  build.rs  bump.rs  check.rs  compile.rs  coverage.rs  dependencies.rs  doc.rs  fix.rs  mod.rs  publish.rs  test.rs  validate.rs  vulnerabilities.rs
(+4 files in other folders)
