[workspace]
resolver = "2"
members = [
    "./crates/*",
    # "./examples/*"
    "./xtask",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
# === CLI & GUI ===
clap = { version = "4.6.1", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }

# === Unitest & Bench ===
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

# === Log & Trace ===
tracing = { version = "0.1.44", default-features = false, features = ["attributes", "std"] }
# === Exception Handling ===
thiserror = { version = "2.0.18", default-features = false }
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }  # for xtask

# === Deep Learning Core ===
burn = { version = "0.21.0-pre.3", default-features = false }
burn-train = { version = "0.21.0-pre.3", default-features = false }
burn-fusion = { version = "0.21.0-pre.3", default-features = false }
burn-cubecl = { version = "0.21.0-pre.3", default-features = false }
burn-ir = { version = "0.21.0-pre.3", default-features = false }
burn-store = { version = "0.21.0-pre.3", default-features = false }
burn-optim = { version = "0.21.0-pre.3", default-features = false }
burn-ndarray = { version = "0.21.0-pre.3", default-features = false }

# === Performance ===
# === Frame ===
# === Data Structures ===
# === File ===
# === Serialization ===
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
sonic-rs = { version = "0.5.8", default-features = false } # instead of serde_json!!!

# === CI/CD ===
xshell = { version = "0.3.0-pre.2", default-features = false }

# === Database ===


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
