[package]
name = "rwkv-derive"
authors = ["caizus <18930215187@163.com>"]

description = "Procedural macros (LineRef, ConfigBuilder) for rwkv-rs configuration and mmap models"
documentation = "https://docs.rs/rwkv"
repository = "https://github.com/rwkv-rs/rwkv-rs"

rust-version = "1.95"

edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "parsing", "proc-macro"] }

[dev-dependencies]
trybuild = { workspace = true }
