[package]
name = "rwkv-nn"
authors = ["caizus <18930215187@163.com>"]
categories = ["science", "algorithms"]
keywords = ["rwkv", "llm", "inference", "deep-learning", "burn"]

description = "practical and extensible RWKV toolkit in Rust"
documentation = "https://docs.rs/rwkv"
repository = "https://github.com/rwkv-rs/rwkv-rs"

rust-version = "1.95"
autobenches = false

edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[lib]
bench = false

[[bench]]
name = "kernels"
harness = false


[features]
default = []
trace = ["dep:tracing"]
autotune = ["burn-cubecl/autotune"]
autotune-checks = ["autotune", "burn-cubecl/autotune-checks"]
fusion = ["dep:burn-fusion", "burn-cubecl/fusion"]
cpu = []
wgpu = ["burn/wgpu"]
webgpu = ["wgpu", "burn/webgpu"]
vulkan = ["wgpu", "burn/vulkan"]
metal = ["wgpu", "burn/metal"]
cuda = ["burn/cuda"]
rocm = ["burn/rocm"]

[dependencies]
# === Log & Trace ===
tracing = { workspace = true, optional = true }

# === Exception Handling ===
thiserror = { workspace = true }

# === Deep Learning Core ===
burn = { workspace = true, default-features = false, features = ["std", "autodiff", "cubecl", "cpu"] }
burn-fusion = { workspace = true, default-features = false, features = ["std"], optional = true }
burn-cubecl = { workspace = true, default-features = false, features = ["std"] }
burn-ir = { workspace = true, default-features = false, features = ["std"] }

# === Performance ===

# === Frame ===

# === Data Structures ===

# === File ===

# === Serialization ===
serde = { workspace = true, default-features = false }

# === Local Dependencies ===
#rwkv-config = { path = "../rwkv-config" }
#rwkv-data = { path = "../rwkv-data" }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true
